--- a/index.html
+++ b/index.html
@@ -6,19 +6,20 @@
 	<body>
 		<div class="app typography">
 			<div class="navigation">
+				<h1 class="header">Typing</h1>
 				<div id="nav__set-text" class="button">Set text</div>
 				<div id="nav__type" class="button">Type</div>
 			</div>
 			<div class="app__content switcher">
-				<div id="page__set-text" class="switcher__item">
-					<textarea id="set-text-input" class="big-textarea">
+				<div id="page__set-text" class="switcher__item set-text-page">
+					<textarea id="set-text-input" class="big-textarea set-text-page__input" placeholder="Enter text here">
 					</textarea>
 				</div>
-				<div id="page__type" class="switcher__item">
+				<div id="page__type" class="switcher__item type-page">
 					<div class="typing">
 						<p id="typing-text" class="typing__text"></p>
 					</div>
-					<input type="text">
+					<input type="text" class="type-page__input">
 				</div>
 			</div>
 		</div>
